force-app/main/default/objects/Dynamic_Data_Table__mdt/Dynamic_Data_Table__mdt.object-meta.xml
<CustomObject>
    <label>Dynamic Data Table</label>
    <pluralLabel>Dynamic Data Tables</pluralLabel>
</CustomObject>