force-app/main/default/objects/Dynamic_Data_Table__mdt/fields/Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Field_Value__c</fullName>
    <label>Field Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>