force-app/main/default/objects/Dynamic_Data_Table__mdt/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <label>Header</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>