force-app/main/default/objects/Dynamic_Data_Table__mdt/fields/Table_Title__c.field-meta.xml
<CustomField>
    <fullName>Table_Title__c</fullName>
    <label>Table Title</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>